two files were changed and three new files were added

--- a/aml/01_feml/03_hw_gradient_descent.ipynb
+++ b/aml/01_feml/03_hw_gradient_descent.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "id": "3e930f13-6d08-4c97-8642-d8e0720e1c65",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "83d5ea79-7dbc-436d-882c-d460d340bbd1",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "558fe1b8-5cfb-45f7-9075-30586ead4527",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "d37b83f1-86bd-4347-a45c-685eb4546b48",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
        "(150, 4)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "8d9c6117-c6be-4efe-ae4d-26f739a333a1",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "(150,)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "fc8c0213-faa2-439a-95df-bc962fbeb6cc",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "0b9257d0-1cbc-4514-9e63-67c8a76d11af",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "(100, 4)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "2848eb13-5046-4c26-9712-c521bbd1f895",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "(100,)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "a85ebdd5-788b-4e3d-be7e-f52adb292822",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "fc480e89-2d93-43a7-8aee-69dfe1f08e4d",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "       [1. , 6.5, 2.8, 4.6, 1.5]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "id": "66d99f4a-8ac6-4be7-b964-f32981d1e3ba",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "(100, 5)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "id": "72426138-64ee-4439-a1aa-765ad0a51da4",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 13,
    "id": "a849b9c4-20f6-4ed8-9a9e-cf15af7f29f0",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,6 @@
     "        # пустой список издержек:\n",
     "        self.loss_ = []\n",
     "        for i in range(self.n_iter):\n",
-    "            #net_input = self.net_input(X)\n",
     "            output = self.activation(X)\n",
     "            errors = (y - output)\n",
     "            self.w_ += self.eta * X.T.dot(errors)\n",
@@ -344,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 14,
    "id": "b3be877a-6c56-4f51-b2c9-6a199fd6f386",
    "metadata": {},
    "outputs": [],
@@ -354,17 +353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 15,
    "id": "cfc03b6b-8e12-4c0b-935e-92deea028ba9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.LogisticRegressionGD at 0x7f1b6215ef90>"
+       "<__main__.LogisticRegressionGD at 0x7ff72be9f0d0>"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,24 +374,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 16,
    "id": "82f8b195-38f3-4d52-9d8b-c9773e076934",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.00000000e+00, 1.00000000e+00, 6.43687267e-26, 9.65012628e-14,\n",
-       "       1.33571053e-16, 9.99999998e-01, 4.89961245e-02, 1.00000000e+00,\n",
-       "       6.84015714e-25, 6.53000939e-28, 1.00000000e+00, 1.00000000e+00,\n",
-       "       1.00000000e+00, 2.35345019e-16, 1.00000000e+00, 1.00000000e+00,\n",
-       "       1.11971500e-11, 1.00000000e+00, 4.23904666e-23, 2.04010712e-08,\n",
-       "       1.06128281e-30, 5.15396455e-27, 1.67619518e-19, 9.99973957e-01,\n",
-       "       1.00000000e+00, 5.43534759e-30, 1.98978033e-24, 1.00000000e+00,\n",
-       "       9.99999862e-01, 2.92741498e-27])"
+       "array([1.00000000e+00, 1.00000000e+00, 9.14952783e-26, 8.43444878e-14,\n",
+       "       1.66636886e-16, 9.99999998e-01, 4.39093920e-02, 1.00000000e+00,\n",
+       "       9.89659690e-25, 1.05152864e-27, 1.00000000e+00, 1.00000000e+00,\n",
+       "       1.00000000e+00, 3.00105322e-16, 1.00000000e+00, 1.00000000e+00,\n",
+       "       1.24038181e-11, 1.00000000e+00, 6.07685085e-23, 1.96821851e-08,\n",
+       "       1.83586025e-30, 5.37119117e-27, 1.91054456e-19, 9.99979979e-01,\n",
+       "       1.00000000e+00, 1.05539364e-29, 3.27264046e-24, 1.00000000e+00,\n",
+       "       9.99999859e-01, 3.08964207e-27])"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 17,
    "id": "2f9b983f-21b4-4406-bc6d-f5103df12c48",
    "metadata": {},
    "outputs": [
@@ -414,7 +413,7 @@
        "       0, 1, 1, 0, 0, 1, 1, 0])"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 18,
    "id": "7029fc20-6a87-4441-b7dd-0753494005c4",
    "metadata": {},
    "outputs": [
@@ -436,7 +435,7 @@
        "       0, 1, 1, 0, 0, 1, 1, 0])"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 19,
    "id": "86adfbcd-ddf6-4e4b-9f9f-2bab0f22919e",
    "metadata": {},
    "outputs": [
@@ -457,34 +456,13 @@
        "0.9666666666666667"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.accuracy(X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "id": "aa2b7229-a142-431c-851e-85f8621b1f75",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7759938454900326"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.loss_[-1]"
    ]
   },
   {
