--- a/aml/01_feml/02_logistic_regression.ipynb
+++ b/aml/01_feml/02_logistic_regression.ipynb
@@ -2630,9 +2630,15 @@
     "    return logloss_total\n",
     "\n",
     "\n",
+    "# def gr_logloss(X, W, y):\n",
+    "#     y_proba = sigmoid(X @ W)\n",
+    "#     grad = X.T @ (y_proba - y)\n",
+    "#     return grad\n",
+    "\n",
+    "\n",
     "def gr_logloss(X, W, y):\n",
     "    y_proba = sigmoid(X @ W)\n",
-    "    grad = X.T @ (y_proba - y)\n",
+    "    grad = X.T @ (y - y_proba)\n",
     "    return grad"
    ]
   },
@@ -2724,7 +2730,8 @@
     "for i in range(n):\n",
     "    cur_W = next_W\n",
     "    # движение в негативную сторону вычисляемого градиента\n",
-    "    next_W = cur_W - learning_rate * gr_logloss(X, W, y)\n",
+    "    # next_W = cur_W - learning_rate * gr_logloss(X, W, y)\n",
+    "    next_W = cur_W + learning_rate * gr_logloss(X, W, y)\n",
     "    # остановка когда достигнута необходимая степень точности\n",
     "    if np.linalg.norm(cur_W - next_W) <= eps:\n",
     "        break\n",
@@ -2962,7 +2969,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f310d5bb290>"
+       "<matplotlib.collections.PathCollection at 0x7f6c61bc6a10>"
       ]
      },
      "execution_count": 54,
