--- a/aml/01_feml/08_hw_decision_tree.ipynb
+++ b/aml/01_feml/08_hw_decision_tree.ipynb
@@ -2167,7 +2167,9 @@
    "cell_type": "code",
    "execution_count": 78,
    "id": "c55554da-d1eb-404b-9fed-b328ada5b245",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
