File HW01_RSML.ipynb was updated

--- a/aml/rsml_18/Lesson_2.ipynb
+++ b/aml/rsml_18/Lesson_2.ipynb
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "9O9LpFiwQMMS"
    },
@@ -1741,6 +1741,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Adventure|Animation|Children|Comedy|Fantasy',\n",
+       "       'Adventure|Children|Fantasy', 'Comedy|Romance',\n",
+       "       'Comedy|Drama|Romance', 'Comedy'], dtype=object)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.genres.values[:5]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "45NQ6pcdRJJC"
@@ -1751,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1767,7 +1796,7 @@
        "\twith 22084 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1781,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2136,7 +2165,7 @@
        "[9742 rows x 20 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2164,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2587,7 +2616,7 @@
        "NearestNeighbors(metric='euclidean', n_neighbors=7)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2599,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {
     "id": "0zmZbQj-QMMg"
    },
@@ -2611,7 +2640,7 @@
        "\twith 4 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2625,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2634,7 +2663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2651,7 +2680,7 @@
        " array([[8014, 5836, 8161, 4853, 7597, 2302,  863]]))"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2662,14 +2691,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 269
     },
     "id": "PMtcIZthQMMj",
-    "outputId": "4cf09fd7-a236-4571-858c-bf13649a224e"
+    "outputId": "4cf09fd7-a236-4571-858c-bf13649a224e",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2773,7 +2803,7 @@
        "863                      Adventure|Comedy|Fantasy            3  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2790,8 +2820,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2800,6 +2829,24 @@
     "id": "nQe0SKQ2QMMn",
     "outputId": "51bc8ad5-550e-46d0-9e18-8e823068a546"
    },
+   "source": [
+    "movies_with_tags = movies.merge(tags, on='movieId')\n",
+    "movies_with_tags.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "LrRWuyj0zGa4"
+   },
+   "source": [
+    "### Преобразуем теги в векторы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2933,7 +2980,7 @@
        "4  2018      6     2018-6  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2944,17 +2991,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "LrRWuyj0zGa4"
-   },
-   "source": [
-    "### Преобразуем теги в векторы"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3062,7 +3100,7 @@
        "2     2018-5  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3073,7 +3111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3089,7 +3127,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3100,7 +3138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3115,7 +3153,7 @@
        "(1589,)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3126,7 +3164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {
     "id": "gRgeCL_IQMMr"
    },
@@ -3137,7 +3175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3157,7 +3195,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3168,7 +3206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3183,7 +3221,7 @@
        "(1572,)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3194,7 +3232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3434,7 +3472,7 @@
        "[2851 rows x 11 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3446,7 +3484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 50,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3484,7 +3522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3508,7 +3546,7 @@
        " 'MarkRuffalo']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3519,7 +3557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3537,7 +3575,7 @@
        " '13 Going on 30 (2004)']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3548,7 +3586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3741,7 +3779,7 @@
        "3085     2010-7  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3752,7 +3790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3768,7 +3806,7 @@
        "\twith 3598 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3781,7 +3819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4161,7 +4199,7 @@
        "[1572 rows x 1472 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4181,7 +4219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4604,7 +4642,7 @@
        "NearestNeighbors(n_neighbors=10)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4616,7 +4654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 57,
    "metadata": {
     "id": "bRjIgE4vQMMx"
    },
@@ -4628,7 +4666,7 @@
        "\twith 3 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4642,7 +4680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4653,7 +4691,7 @@
        " array([[1432,  211,  565,  439,  546,  590,  432,  951,  547,  336]]))"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4665,7 +4703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 59,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
